--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,10 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+
+### Dataset, MOdel weights, Annotations & Results
+data/
+evaluate/annotation/
+eval_outputs/
+model_outputs/
